--- a/code/cocosmanager/pom.xml
+++ b/code/cocosmanager/pom.xml
@@ -11,7 +11,6 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.0.0.RELEASE</version>
-		<relativePath></relativePath>
 	</parent>
 
 	<!-- spring-boot的web启动的jar包 -->
@@ -37,11 +36,17 @@
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 
-		thymeleaf模板jar，是很不错的html数据传递取值，类似jsp的jstl
- 		<dependency>
- 			<groupId>org.springframework.boot</groupId>
- 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
- 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
+		</dependency>
+
+		<!--thymeleaf模板jar，是很不错的html数据传递取值，类似jsp的jstl-->
+ 		<!--<dependency>-->
+ 			<!--<groupId>org.springframework.boot</groupId>-->
+ 			<!--<artifactId>spring-boot-starter-thymeleaf</artifactId>-->
+ 		<!--</dependency>-->
 	</dependencies>
 
 	<!--maven的插件 -->
